@@ -1,3 +1,10 @@
+2007-05-13  Piotr Fusik  <fox@scene.pl>
+* acpu.c, apokeysnd.c, asap.c, asap.h, asap_internal.h - ASAP_State.cycle
+  is now real cycle rather than 6502 cycle
+
+* asap.c: 6502 flag I is initially cleared - Digital_Trash.sap works
+
+
 2007-05-12  Piotr Fusik  <fox@scene.pl>
 * asap.c: fixed ASAP_Seek() that incorrectly used sample_offset instead
   of sample_index
